# egui-3ds-experiments

./: Cargo.toml  LICENSE.md
src/: colors.rs  main.rs
